--- a/src/main/resources/templates/profile/roll-dice.html
+++ b/src/main/resources/templates/profile/roll-dice.html
@@ -5,14 +5,14 @@
     <title>Dice Roll</title>
 </head>
 <body>
-<h1>Roll the number of dice!</h1>
+<h1>Guess the Number</h1>
 <ul>
-    <li><a href="">1</a></li>
-    <li><a href="">1</a></li>
-    <li><a href="">1</a></li>
-    <li><a href="">1</a></li>
-    <li><a href="">1</a></li>
-    <li><a href="">1</a></li>
+    <li><a href="dice-results.html" name="1" id="1">1</a></li>
+    <li><a href="dice-results.html" name="2" id="2">2</a></li>
+    <li><a href="dice-results.html" name="3" id="3">3</a></li>
+    <li><a href="dice-results.html" name="4" id="4">4</a></li>
+    <li><a href="dice-results.html" name="5" id="5">5</a></li>
+    <li><a href="dice-results.html" name="6" id="6">6</a></li>
 </ul>
 
 
