--- a/src/main/resources/templates/profile/posts/create.html
+++ b/src/main/resources/templates/profile/posts/create.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Title</title>
+<head th:include="fragments :: head('Create a Post')">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Create a Post</title>
 </head>
 <body>
-
+<nav th:replace="fragments :: my-navbar"></nav>
+<form action="/posts/create" method="post">
+    <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" class="form-control">
+    </div>
+    <div>
+        <label for="body">Body</label>
+        <input type="text" name="body" id="body" class="form-control">
+    </div>
+    <button class="btn btn-default">Submit</button>
+</form>
 </body>
 </html>
