--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragments :: head('Create a Post')">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Create a Post</title>
 </head>
 <body>
 <nav th:replace="fragments :: my-navbar"></nav>
-<form action="/posts/create" method="post">
+<form action="/posts/create" method="post" th:object="${post}">
     <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" name="title" id="title" class="form-control">
+        <input type="text" name="title" id="title" class="form-control" th:field="*{title}" />
     </div>
     <div>
         <label for="body">Body</label>
-        <input type="text" name="body" id="body" class="form-control">
+        <input type="text" name="body" id="body" class="form-control" th:field="*{body}" />
     </div>
     <button class="btn btn-default">Submit</button>
 </form>
