--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:include="fragments :: head('Create a Post')">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Create a Post</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:include="fragments :: head('Create a new Post')" />
 <body>
-<nav th:replace="fragments :: my-navbar"></nav>
-<div>
-    <form th:action="${'/posts/' + post.id + '/edit'}"
-          method="post"
-          th:object="${post}">
-          <!--th:include="form">-->
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title" class="form-control" th:field="*{title}"/>
-        </div>
-        <div>
-            <label for="body">Body</label>
-            <input type="text" name="body" id="body" class="form-control" th:field="*{body}"/>
-        </div>
-        <button class="btn btn-default">Edit</button>
+<nav th:replace="fragments :: my-navbar"/>
+<div class="container">
+    <form
+            th:action="${'/posts/' + post.id + '/edit'}"
+            method="post"
+            th:object="${post}"
+            th:include="fragments :: form"
+    >
     </form>
 </div>
 </body>
