--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -50,27 +50,27 @@
     <button class="btn btn-default">Save</button>
 </form>
 
-<form th:fragment="adForm">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input id="title" class="form-control" th:field="*{title}"/>
-        <div class="alert alert-warning alert-dismissible" role="alert" th:if="${#fields.hasErrors('title')}">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                    aria-hidden="true">&times;</span></button>
-            <span th:errors="*{title}"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="description">Description</label>
-        <input id="description" class="form-control" th:field="*{description}"/>
-        <div class="alert alert-warning alert-dismissible" role="alert" th:if="${#fields.hasErrors('description')}">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                    aria-hidden="true">&times;</span></button>
-            <span th:errors="*{description}"/>
-        </div>
-    </div>
-    <button class="btn btn-default">Save</button>
-</form>
+<!--<form th:fragment="adForm">-->
+    <!--<div class="form-group">-->
+        <!--<label for="title">Title</label>-->
+        <!--<input id="title" class="form-control" th:field="*{title}"/>-->
+        <!--<div class="alert alert-warning alert-dismissible" role="alert" th:if="${#fields.hasErrors('title')}">-->
+            <!--<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span-->
+                    <!--aria-hidden="true">&times;</span></button>-->
+            <!--<span th:errors="*{title}"/>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+        <!--<label for="description">Body</label>-->
+        <!--<input id="description" class="form-control" th:field="*{body}"/>-->
+        <!--<div class="alert alert-warning alert-dismissible" role="alert" th:if="${#fields.hasErrors('body')}">-->
+            <!--<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span-->
+                    <!--aria-hidden="true">&times;</span></button>-->
+            <!--<span th:errors="*{body}"/>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<button class="btn btn-default">Save</button>-->
+<!--</form>-->
 
 <div th:fragment="scripts">
     <script src="http://code.jquery.com/jquery-2.2.4.min.js"
