updated fragments relocated custom error pages

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -47,6 +47,7 @@
         <label for="body">Body</label>
         <input id="body" type="text" th:field="*{body}"/>
     </div>
+    <button class="btn btn-default">Edit</button>
     <button class="btn btn-default">Save</button>
 </form>
 
