--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -28,7 +28,7 @@
                 <li><a href="/login">Login</a></li>
 
                 <li>
-                    <form th:action="@{/logout}" th:method="post">
+                    <form th:action="@{/logout}" th:method="post" id="logout">
                         <button class="btn-link btn" style="margin-top: 8px">Logout</button>
                     </form>
                 </li>
@@ -38,43 +38,26 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<form th:fragment="form">
-    <div class="form-group">
+<form th:fragment="postForm">
+    <div class="form-group" >
         <label for="title">Title</label>
+        <br/>
         <input id="title" type="text" th:field="*{title}"/>
     </div>
     <div class="form-group">
         <label for="body">Body</label>
-        <input id="body" type="text" th:field="*{body}"/>
+        <br/>
+        <textarea class="form-control" rows="5" id="body" type="text" th:field="*{body}"></textarea>
     </div>
     <div>
             <label for="file">Upload a file!</label>
             <input id="file" name="file" type="file"/>
     </div>
-    <button class="btn btn-default">Save</button>
+    <br/>
+    <button type="submit" class="btn btn-default">Save</button>
 </form>
 
-<!--<form th:fragment="adForm">-->
-<!--<div class="form-group">-->
-<!--<label for="title">Title</label>-->
-<!--<input id="title" class="form-control" th:field="*{title}"/>-->
-<!--<div class="alert alert-warning alert-dismissible" role="alert" th:if="${#fields.hasErrors('title')}">-->
-<!--<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span-->
-<!--aria-hidden="true">&times;</span></button>-->
-<!--<span th:errors="*{title}"/>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<label for="description">Body</label>-->
-<!--<input id="description" class="form-control" th:field="*{body}"/>-->
-<!--<div class="alert alert-warning alert-dismissible" role="alert" th:if="${#fields.hasErrors('body')}">-->
-<!--<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span-->
-<!--aria-hidden="true">&times;</span></button>-->
-<!--<span th:errors="*{body}"/>-->
-<!--</div>-->
-<!--</div>-->
-<!--<button class="btn btn-default">Save</button>-->
-<!--</form>-->
+
 
 <div th:fragment="scripts">
     <script src="http://code.jquery.com/jquery-2.2.4.min.js"
