--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -9,7 +9,7 @@
     <h2>Listing of all the posts</h2>
     <div th:each="post : ${posts}">
         <img th:if="${post.imageUrl}" style="width: 10%; height: 10%" th:src="@{'/uploads/' + ${post.imageUrl}}" />
-        <h2>Title: <span th:text="${post.title}"></span></h2>
+        <h2>Title: <a th:href="${'/posts/' + post.id}" th:text="${post.title}"></a></h2>
         <h2>Body: <span th:text="${post.body}"></span></h2>
         <!--<h2>user's email: <span th:text="${post.owner.email}"></span></h2>-->
     </div>
